# synth

./: .gitmodules  Makefile  README.md  main.py  pyproject.toml
